Theme & shoppingcart fix
THe dashboard mat-tab overlapped with the shopping cart.

The selected theme is now also has an indication in the theme select section.

--- a/src/scss/themes/themes.scss
+++ b/src/scss/themes/themes.scss
@@ -53,3 +53,8 @@ wah-character {
 .mat-card-header-text {
   margin-left: 0 !important;
 }
+
+.mat-tab-link-container {
+  /* If not, it will cover the shopping cart partially */
+  z-index: 0 !important;
+}
